lang.syn.output
Grammar

    0 $accept: Program $end

    1 Program: CodeBlock

    2 CodeBlock: CodeBlock Command
    3          | Command

    4 Command: Delimited delim_token
    5        | Undelimited

    6 Undelimited: Cond
    7            | While
    8            | For
    9            | SwitchCase
   10            | NamedFun
   11            | '{' CodeBlock '}'

   12 Delimited: Expr
   13          | Declaration
   14          | DoWhile
   15          | return_token Expr
   16          | cont_token
   17          | break_token
   18          | %empty

   19 NamedFun: function_token id_token '(' IDList ')' '{' CodeBlock '}'

   20 Declaration: const_token id_token
   21            | const_token Assign
   22            | var_token id_token
   23            | var_token Assign
   24            | let_token id_token
   25            | let_token Assign

   26 Cond: if_token '(' Expr ')' Command
   27     | if_token '(' Expr ')' Command else_token Command

   28 While: while_token '(' Expr ')' Command

   29 For: for_token '(' Delimited delim_token Expr delim_token Delimited ')' Command

   30 DoWhile: do_token Command while_token '(' Expr ')'

   31 SwitchCase: switch_token '(' Expr ')' '{' Cases '}'

   32 Cases: Cases Case
   33      | Cases Default
   34      | Case
   35      | Default

   36 Case: case_token Primitive ':' Command

   37 Default: default_token ':' Command

   38 Expr: Expr plus_token Expr
   39     | Expr minus_token Expr
   40     | Expr times_token Expr
   41     | Expr divide_token Expr
   42     | Expr mod_token Expr
   43     | Expr power_token Expr
   44     | plus_token Expr
   45     | minus_token Expr
   46     | inc_token Expr
   47     | dec_token Expr
   48     | Expr inc_token
   49     | Expr dec_token
   50     | delete_token Expr
   51     | typeof_token Expr
   52     | void_token Expr
   53     | Expr eq_token Expr
   54     | Expr not_eq_token Expr
   55     | Expr t_eq_token Expr
   56     | Expr t_not_eq_token Expr
   57     | Expr less_token Expr
   58     | Expr less_eq_token Expr
   59     | Expr great_token Expr
   60     | Expr great_eq_token Expr
   61     | Expr in_token Expr
   62     | Expr instanceof_token Expr
   63     | log_not_token Expr
   64     | Expr log_and_token Expr
   65     | Expr log_or_token Expr
   66     | bit_not_token Expr
   67     | Expr bit_and_token Expr
   68     | Expr bit_or_token Expr
   69     | Expr bit_xor_token Expr
   70     | Expr bit_shift_l_token Expr
   71     | Expr bit_shift_r_token Expr
   72     | Expr bit_shift_u_token Expr
   73     | Expr '?' Expr ':' Expr
   74     | '(' Expr ')'
   75     | new_token Expr
   76     | Expr '(' ArgList ')'
   77     | LValue
   78     | Literal
   79     | Assign

   80 LValue: Expr bracket_token Expr bracket_closed
   81       | Expr dot_access_token Expr
   82       | id_token

   83 ArgList: ArgListNone
   84        | ArgListFull

   85 ArgListFull: ArgListFull comma_token Expr
   86            | Expr

   87 ArgListNone: %empty

   88 Assign: LValue assign_token Expr
   89       | LValue ass_plus_token Expr
   90       | LValue ass_minus_token Expr
   91       | LValue ass_pow_token Expr
   92       | LValue ass_mult_token Expr
   93       | LValue ass_div_token Expr
   94       | LValue ass_mod_token Expr
   95       | LValue ass_sh_l_token Expr
   96       | LValue ass_sh_r_token Expr
   97       | LValue ass_sh_u_token Expr
   98       | LValue ass_con_b_token Expr
   99       | LValue ass_xor_b_token Expr
  100       | LValue ass_dis_b_token Expr

  101 Literal: Primitive
  102        | IndexedObj
  103        | Lambda

  104 Primitive: undefined_token
  105          | null_token
  106          | nan_token
  107          | true_token
  108          | false_token
  109          | num_token
  110          | string_token

  111 IndexedObj: ArrLiteral
  112           | ObjLiteral

  113 ArrLiteral: bracket_token LiteralList bracket_closed

  114 LiteralList: LiteralList comma_token Expr
  115            | Expr
  116            | %empty

  117 ObjLiteral: '{' KVLiterals '}'

  118 KVLiterals: KVLiterals comma_token KVLiteral
  119           | KVLiteral
  120           | %empty

  121 KVLiteral: Key ':' Expr

  122 Key: string_token
  123    | id_token

  124 Lambda: function_token '(' IDList ')' '{' LambdaBody '}'

  125 LambdaBody: CodeBlock
  126           | %empty

  127 IDList: IDListFull
  128       | IDListEmpty

  129 IDListFull: IDListFull comma_token id_token
  130           | id_token

  131 IDListEmpty: %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 26 27 28 29 30 31 74 76 124
')' (41) 19 26 27 28 29 30 31 74 76 124
':' (58) 36 37 73 121
'?' (63) 73
'{' (123) 11 19 31 117 124
'}' (125) 11 19 31 117 124
error (256)
delim_token (258) 4 29
id_token (259) 19 20 22 24 82 123 129 130
undefined_token (260) 104
null_token (261) 105
nan_token (262) 106
true_token (263) 107
false_token (264) 108
num_token (265) 109
string_token (266) 110 122
return_token (267) 15
break_token (268) 17
cont_token (269) 16
if_token (270) 26 27
else_token (271) 27
switch_token (272) 31
case_token (273) 36
while_token (274) 28 30
for_token (275) 29
do_token (276) 30
default_token (277) 37
assign_token (278) 88
ass_plus_token (279) 89
ass_minus_token (280) 90
ass_pow_token (281) 91
ass_mult_token (282) 92
ass_div_token (283) 93
ass_mod_token (284) 94
ass_sh_l_token (285) 95
ass_sh_r_token (286) 96
ass_sh_u_token (287) 97
ass_con_b_token (288) 98
ass_xor_b_token (289) 99
ass_dis_b_token (290) 100
log_or_token (291) 65
log_and_token (292) 64
bit_or_token (293) 68
bit_xor_token (294) 69
bit_and_token (295) 67
eq_token (296) 53
not_eq_token (297) 54
t_eq_token (298) 55
t_not_eq_token (299) 56
less_token (300) 57
less_eq_token (301) 58
great_token (302) 59
great_eq_token (303) 60
in_token (304) 61
instanceof_token (305) 62
bit_shift_l_token (306) 70
bit_shift_r_token (307) 71
bit_shift_u_token (308) 72
plus_token (309) 38 44
minus_token (310) 39 45
times_token (311) 40
divide_token (312) 41
mod_token (313) 42
power_token (314) 43
inc_token (315) 46 48
dec_token (316) 47 49
log_not_token (317) 63
bit_not_token (318) 66
delete_token (319) 50
void_token (320) 52
typeof_token (321) 51
new_token (322) 75
function_token (323) 19 124
const_token (324) 20 21
let_token (325) 24 25
var_token (326) 22 23
bracket_token (327) 80 113
bracket_closed (328) 80 113
dot_access_token (329) 81
no_else_token (330)
phony_lval (331)
comma_token (332) 85 114 118 129
uplus_token (333)
uminus_token (334)
post_inc (335)
post_dec (336)
fn_call_token (337)
prec_parens_token (338)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
Program (91)
    on left: 1, on right: 0
CodeBlock (92)
    on left: 2 3, on right: 1 2 11 19 125
Command (93)
    on left: 4 5, on right: 2 3 26 27 28 29 30 36 37
Undelimited (94)
    on left: 6 7 8 9 10 11, on right: 5
Delimited (95)
    on left: 12 13 14 15 16 17 18, on right: 4 29
NamedFun (96)
    on left: 19, on right: 10
Declaration (97)
    on left: 20 21 22 23 24 25, on right: 13
Cond (98)
    on left: 26 27, on right: 6
While (99)
    on left: 28, on right: 7
For (100)
    on left: 29, on right: 8
DoWhile (101)
    on left: 30, on right: 14
SwitchCase (102)
    on left: 31, on right: 9
Cases (103)
    on left: 32 33 34 35, on right: 31 32 33
Case (104)
    on left: 36, on right: 32 34
Default (105)
    on left: 37, on right: 33 35
Expr (106)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79, on right: 12 15 26 27 28 29 30 31 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 80 81 85 86 88 89 90 91 92 93
    94 95 96 97 98 99 100 114 115 121
LValue (107)
    on left: 80 81 82, on right: 77 88 89 90 91 92 93 94 95 96 97 98
    99 100
ArgList (108)
    on left: 83 84, on right: 76
ArgListFull (109)
    on left: 85 86, on right: 84 85
ArgListNone (110)
    on left: 87, on right: 83
Assign (111)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100, on right: 21
    23 25 79
Literal (112)
    on left: 101 102 103, on right: 78
Primitive (113)
    on left: 104 105 106 107 108 109 110, on right: 36 101
IndexedObj (114)
    on left: 111 112, on right: 102
ArrLiteral (115)
    on left: 113, on right: 111
LiteralList (116)
    on left: 114 115 116, on right: 113 114
ObjLiteral (117)
    on left: 117, on right: 112
KVLiterals (118)
    on left: 118 119 120, on right: 117 118
KVLiteral (119)
    on left: 121, on right: 118 119
Key (120)
    on left: 122 123, on right: 121
Lambda (121)
    on left: 124, on right: 103
LambdaBody (122)
    on left: 125 126, on right: 124
IDList (123)
    on left: 127 128, on right: 19 124
IDListFull (124)
    on left: 129 130, on right: 127 129
IDListEmpty (125)
    on left: 131, on right: 128


State 0

    0 $accept: . Program $end

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    return_token     shift, and go to state 9
    break_token      shift, and go to state 10
    cont_token       shift, and go to state 11
    if_token         shift, and go to state 12
    switch_token     shift, and go to state 13
    while_token      shift, and go to state 14
    for_token        shift, and go to state 15
    do_token         shift, and go to state 16
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 27
    const_token      shift, and go to state 28
    let_token        shift, and go to state 29
    var_token        shift, and go to state 30
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 32
    '('              shift, and go to state 33

    $default  reduce using rule 18 (Delimited)

    Program      go to state 34
    CodeBlock    go to state 35
    Command      go to state 36
    Undelimited  go to state 37
    Delimited    go to state 38
    NamedFun     go to state 39
    Declaration  go to state 40
    Cond         go to state 41
    While        go to state 42
    For          go to state 43
    DoWhile      go to state 44
    SwitchCase   go to state 45
    Expr         go to state 46
    LValue       go to state 47
    Assign       go to state 48
    Literal      go to state 49
    Primitive    go to state 50
    IndexedObj   go to state 51
    ArrLiteral   go to state 52
    ObjLiteral   go to state 53
    Lambda       go to state 54


State 1

   82 LValue: id_token .

    $default  reduce using rule 82 (LValue)


State 2

  104 Primitive: undefined_token .

    $default  reduce using rule 104 (Primitive)


State 3

  105 Primitive: null_token .

    $default  reduce using rule 105 (Primitive)


State 4

  106 Primitive: nan_token .

    $default  reduce using rule 106 (Primitive)


State 5

  107 Primitive: true_token .

    $default  reduce using rule 107 (Primitive)


State 6

  108 Primitive: false_token .

    $default  reduce using rule 108 (Primitive)


State 7

  109 Primitive: num_token .

    $default  reduce using rule 109 (Primitive)


State 8

  110 Primitive: string_token .

    $default  reduce using rule 110 (Primitive)


State 9

   15 Delimited: return_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 57
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 10

   17 Delimited: break_token .

    $default  reduce using rule 17 (Delimited)


State 11

   16 Delimited: cont_token .

    $default  reduce using rule 16 (Delimited)


State 12

   26 Cond: if_token . '(' Expr ')' Command
   27     | if_token . '(' Expr ')' Command else_token Command

    '('  shift, and go to state 58


State 13

   31 SwitchCase: switch_token . '(' Expr ')' '{' Cases '}'

    '('  shift, and go to state 59


State 14

   28 While: while_token . '(' Expr ')' Command

    '('  shift, and go to state 60


State 15

   29 For: for_token . '(' Delimited delim_token Expr delim_token Delimited ')' Command

    '('  shift, and go to state 61


State 16

   30 DoWhile: do_token . Command while_token '(' Expr ')'

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    return_token     shift, and go to state 9
    break_token      shift, and go to state 10
    cont_token       shift, and go to state 11
    if_token         shift, and go to state 12
    switch_token     shift, and go to state 13
    while_token      shift, and go to state 14
    for_token        shift, and go to state 15
    do_token         shift, and go to state 16
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 27
    const_token      shift, and go to state 28
    let_token        shift, and go to state 29
    var_token        shift, and go to state 30
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 32
    '('              shift, and go to state 33

    $default  reduce using rule 18 (Delimited)

    Command      go to state 62
    Undelimited  go to state 37
    Delimited    go to state 38
    NamedFun     go to state 39
    Declaration  go to state 40
    Cond         go to state 41
    While        go to state 42
    For          go to state 43
    DoWhile      go to state 44
    SwitchCase   go to state 45
    Expr         go to state 46
    LValue       go to state 47
    Assign       go to state 48
    Literal      go to state 49
    Primitive    go to state 50
    IndexedObj   go to state 51
    ArrLiteral   go to state 52
    ObjLiteral   go to state 53
    Lambda       go to state 54


State 17

   44 Expr: plus_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 63
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 18

   45 Expr: minus_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 64
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 19

   46 Expr: inc_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 65
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 20

   47 Expr: dec_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 66
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 21

   63 Expr: log_not_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 67
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 22

   66 Expr: bit_not_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 68
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 23

   50 Expr: delete_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 69
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 24

   52 Expr: void_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 70
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 25

   51 Expr: typeof_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 71
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 26

   75 Expr: new_token . Expr

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 72
    LValue      go to state 47
    Assign      go to state 48
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 27

   19 NamedFun: function_token . id_token '(' IDList ')' '{' CodeBlock '}'
  124 Lambda: function_token . '(' IDList ')' '{' LambdaBody '}'

    id_token  shift, and go to state 73
    '('       shift, and go to state 74


State 28

   20 Declaration: const_token . id_token
   21            | const_token . Assign

    id_token         shift, and go to state 75
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 76
    LValue      go to state 47
    Assign      go to state 77
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 29

   24 Declaration: let_token . id_token
   25            | let_token . Assign

    id_token         shift, and go to state 78
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 76
    LValue      go to state 47
    Assign      go to state 79
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 30

   22 Declaration: var_token . id_token
   23            | var_token . Assign

    id_token         shift, and go to state 80
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    Expr        go to state 76
    LValue      go to state 47
    Assign      go to state 81
    Literal     go to state 49
    Primitive   go to state 50
    IndexedObj  go to state 51
    ArrLiteral  go to state 52
    ObjLiteral  go to state 53
    Lambda      go to state 54


State 31

  113 ArrLiteral: bracket_token . LiteralList bracket_closed

    id_token         shift, and go to state 1
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 8
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 55
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 56
    '('              shift, and go to state 33

    $default  reduce using rule 116 (LiteralList)

    Expr         go to state 82
    LValue       go to state 47
    Assign       go to state 48
    Literal      go to state 49
    Primitive    go to state 50
    IndexedObj   go to state 51
    ArrLiteral   go to state 52
    LiteralList  go to state 83
    ObjLiteral   go to state 53
    Lambda       go to state 54


State 32

   11 Undelimited: '{' . CodeBlock '}'
  117 ObjLiteral: '{' . KVLiterals '}'

    id_token         shift, and go to state 84
    undefined_token  shift, and go to state 2
    null_token       shift, and go to state 3
    nan_token        shift, and go to state 4
    true_token       shift, and go to state 5
    false_token      shift, and go to state 6
    num_token        shift, and go to state 7
    string_token     shift, and go to state 85
    return_token     shift, and go to state 9
    break_token      shift, and go to state 10
    cont_token       shift, and go to state 11
    if_token         shift, and go to state 12
    switch_token     shift, and go to state 13
    while_token      shift, and go to state 14
    for_token        shift, and go to state 15
    do_token         shift, and go to state 16
    plus_token       shift, and go to state 17
    minus_token      shift, and go to state 18
    inc_token        shift, and go to state 19
    dec_token        shift, and go to state 20
    log_not_token    shift, and go to state 21
    bit_not_token    shift, and go to state 22
    delete_token     shift, and go to state 23
    void_token       shift, and go to state 24
    typeof_token     shift, and go to state 25
    new_token        shift, and go to state 26
    function_token   shift, and go to state 27
    const_token      shift, and go to state 28
    let_token        shift, and go to state 29
    var_token        shift, and go to state 30
    bracket_token    shift, and go to state 31
    '{'              shift, and go to state 32
    '('              shift, and go to state 33

    delim_token  reduce using rule 18 (Delimited)
    $default     reduce using rule 120 (KVLiterals)
